--- a/config.env
+++ b/config.env
@@ -1,3 +1,4 @@
 NODE_ENV=development
 PORT=8080
 LOCAL_DATABASE=mongodb://127.0.0.1:27017/Twitter-Replica
+HOSTED_DATABASE=mongodb+srv://ziyad:W8oF2WIdTDl6di7j@cluster0.wwnrt6f.mongodb.net/Twitter_Replica
