--- a/config.env
+++ b/config.env
@@ -4,3 +4,8 @@ LOCAL_DATABASE=mongodb://127.0.0.1:27017/Twitter-Replica
 HOSTED_DATABASE=mongodb+srv://ziyad:W8oF2WIdTDl6di7j@cluster0.wwnrt6f.mongodb.net/Twitter_Replica
 # Since it's just a test db, this isn't really a big deal
 JWT_SECRET=TheMostSecurePassKeyPasswordThingyEverINLife
+
+EMAIL_HOST=sandbox.smtp.mailtrap.io
+EMAIL_PORT=2525
+EMAIL_USERNAME=0eb11db2116964
+EMAIL_PASSWORD=43879db053807f
