--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.0",
     "morgan": "^1.10.1",
+    "nodemailer": "^7.0.6",
     "validator": "^13.15.15"
   },
   "devDependencies": {
