--- a/package.json
+++ b/package.json
@@ -19,14 +19,22 @@
     "start:prod": "set NODE_ENV=production&& nodemon server.js"
   },
   "dependencies": {
+    "@exortek/express-mongo-sanitize": "^1.1.0",
     "bcryptjs": "^3.0.2",
+    "dompurify": "^3.2.7",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^8.1.0",
+    "helmet": "^8.1.0",
+    "hpp-clean": "^1.0.4",
+    "jsdom": "^27.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.0",
     "morgan": "^1.10.1",
     "nodemailer": "^7.0.6",
-    "validator": "^13.15.15"
+    "validator": "^13.15.15",
+    "xss": "^1.0.15"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
