feat: using newer Nodejs CLIs, file uploading
FIX: patchMyTweet route

instead of using: npm start, I now user node --run start since it's newer and faster, as they say. Though, not by much

- images and videos are now handled by multer

- Deleting old assets when patching a tweets
- addOne and pathcOne factory functions now can handle files

--- a/config.env
+++ b/config.env
@@ -5,6 +5,8 @@ HOSTED_DATABASE=mongodb+srv://ziyad:W8oF2WIdTDl6di7j@cluster0.wwnrt6f.mongodb.ne
 # Since it's just a test db, this isn't really a big deal
 JWT_SECRET=TheMostSecurePassKeyPasswordThingyEverINLife
 
+ROOT_PATH=C:\\Users\\ziyad\\Documents\\GitHub\\Twitter-Replica
+
 EMAIL_HOST=sandbox.smtp.mailtrap.io
 EMAIL_PORT=2525
 EMAIL_USERNAME=0eb11db2116964
