--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "hpp-clean": "^1.0.4",
     "jsdom": "^27.0.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.20.0",
     "mongoose": "^8.17.0",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.6",
+    "sharp": "^0.34.4",
     "validator": "^13.15.15",
     "xss": "^1.0.15"
   },
