CORS & SendGrid &initial chats resource work
- Updated the untouched models (GroupChat/Message - privateChat/Message)

- Implemented CORS

- Implemented SendGrid For production environment

- initial chats controller work

- GetTweet/s now return the likes and bookmarks array to the owner of the tweets only

- un/Follow endpoints

--- a/config.env
+++ b/config.env
@@ -11,3 +11,5 @@ EMAIL_HOST=sandbox.smtp.mailtrap.io
 EMAIL_PORT=2525
 EMAIL_USERNAME=0eb11db2116964
 EMAIL_PASSWORD=43879db053807f
+SENDGRID_USERNAME=apikey
+SENDGRID_PASSWORD=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
