--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
   "main": "app.js",
   "scripts": {
     "start": "node --watch --env-file=.\\config.env server.js",
-    "start:prod": "set NODE_ENV=production && node --watch --env-file=.\\config.env server.js"
+    "start:prod": "set NODE_ENV=production&& node --watch --env-file=.\\config.env server.js"
   },
   "dependencies": {
     "@exortek/express-mongo-sanitize": "^1.1.0",
     "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
     "dompurify": "^3.2.7",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
